--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,29 +1,40 @@
 /* The side navigation menu */
+
 .sidenav {
-    height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
+    height: 100%;
+    /* 100% Full-height */
+    width: 0;
+    /* 0 width - change this with JavaScript */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Stay on top */
     top: 0;
     left: 0;
-    background-color: #111; /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    background-color: #111;
+    /* Black*/
+    overflow-x: hidden;
+    /* Disable horizontal scroll */
+    padding-top: 70px;
+    /* Place content 60px from the top */
+    transition: 0.2s;
+    /* 0.5 second transition effect to slide in the sidenav */
 }
+
 
 /* The navigation menu links */
 .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: deepskyblue;
     display: block;
-    transition: 0.3s
+    transition: 0.1s
 }
 
 /* When you mouse over the navigation links, change their color */
-.sidenav a:hover, .offcanvas a:focus{
+.sidenav a:hover,
+.offcanvas a:focus {
     color: #f1f1f1;
 }
 
@@ -36,18 +47,81 @@
     margin-left: 50px;
 }
 
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-    transition: margin-left .5s;
-    padding: 20px;
+.header {
+    background-color: #2856b6;
+    height: 64px;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
+.inputSearch{
+padding-top: 22px;
+
 }
 
-.header{
-    background-color: #4d94ff;
+
+@media screen and (min-width:992px) {
+    /*Second Nav bar*/
+    .secondary-navbar {
+        margin: 0 auto;
+        height: 50px;
+        -webkit-transition: all 200ms ease;
+        transition: all 200ms ease;
+        position: relative;
+        opacity: 1;
+        text-align: center;
+        background-color: red;
+        display: block;
+    }
+    .secondary-navbar-inner {
+        width: 1060px;
+        position: relative;
+        -webkit-transition: padding 200ms ease;
+        transition: padding 200ms ease;
+        margin: 0 auto;
+    }
+    .buttonSide {
+        padding-top: 15px;
+        padding-left: 14px;
+        display: none;
+    }
 }
+
+@media screen and (max-width: 992px) and (orientation: portrait) {
+    .secondary-navbar {
+        display: none;
+    }
+    .buttonSide {
+        padding-top: 15px;
+        display: block;
+    }
+}
+@media screen and (max-width: 992px) and (orientation: landscape) {
+    .secondary-navbar {
+        display: none;
+    }
+    .buttonSide {
+        padding-top: 15px;
+        padding-left: 25px;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 768px) and (orientation: portrait) {
+    .secondary-navbar {
+        display: none;
+    }
+    .buttonSide {
+        padding-top: 15px;
+        display: block;
+    }
+}
+@media screen and (max-width: 768px) and (orientation: landscape) {
+    .secondary-navbar {
+        display: none;
+    }
+    .buttonSide {
+        padding-left: 25px;
+        padding-top: 15px;
+        display: block;
+    }
+}
+
