--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,127 +1,19 @@
-/* The side navigation menu */
-
-.sidenav {
-    height: 100%;
-    /* 100% Full-height */
-    width: 0;
-    /* 0 width - change this with JavaScript */
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Stay on top */
-    top: 0;
-    left: 0;
-    background-color: #111;
-    /* Black*/
-    overflow-x: hidden;
-    /* Disable horizontal scroll */
-    padding-top: 70px;
-    /* Place content 60px from the top */
-    transition: 0.2s;
-    /* 0.5 second transition effect to slide in the sidenav */
+.formLogin {
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	font-size: 16px;
+	font-weight: 400;
+	min-height: 200px;
+	overflow: hidden;
+	width: 330px;
+	z-index: 1;
+	position: relative;
+	background: #fff;
+	border-radius: 2px;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 5px #888888;
 }
-
-
-/* The navigation menu links */
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: deepskyblue;
-    display: block;
-    transition: 0.1s
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover,
-.offcanvas a:focus {
-    color: #f1f1f1;
-}
-
-/* Position and style the close button (top right corner) */
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-
-.header {
-    background-color: #2856b6;
-    height: 64px;
-}
-
-.inputSearch{
-padding-top: 22px;
-
-}
-
-
-@media screen and (min-width:992px) {
-    /*Second Nav bar*/
-    .secondary-navbar {
-        margin: 0 auto;
-        height: 50px;
-        -webkit-transition: all 200ms ease;
-        transition: all 200ms ease;
-        position: relative;
-        opacity: 1;
-        text-align: center;
-        background-color: red;
-        display: block;
-    }
-    .secondary-navbar-inner {
-        width: 1060px;
-        position: relative;
-        -webkit-transition: padding 200ms ease;
-        transition: padding 200ms ease;
-        margin: 0 auto;
-    }
-    .buttonSide {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 992px) and (orientation: portrait) {
-    .secondary-navbar {
-        display: none;
-    }
-    .buttonSide {
-        padding-top: 15px;
-        padding-left: 25px;
-        display: block;
-    }
-}
-@media screen and (max-width: 992px) and (orientation: landscape) {
-    .secondary-navbar {
-        display: none;
-    }
-    .buttonSide {
-        padding-top: 15px;
-        padding-left: 25px;
-        display: block;
-    }
-}
-
-@media screen and (max-width: 768px) and (orientation: portrait) {
-    .secondary-navbar {
-        display: none;
-    }
-    .buttonSide {
-        padding-top: 15px;
-        padding-left: 5px;
-        display: block;
-    }
-}
-@media screen and (max-width: 768px) and (orientation: landscape) {
-    .secondary-navbar {
-        display: none;
-    }
-    .buttonSide {
-        padding-left: 25px;
-        padding-top: 15px;
-        display: block;
-    }
-}
-
