--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,19 +1,3 @@
 .formLogin {
-	display: -webkit-flex;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-flex-direction: column;
-	-ms-flex-direction: column;
-	flex-direction: column;
-	font-size: 16px;
-	font-weight: 400;
-	min-height: 200px;
-	overflow: hidden;
-	width: 330px;
-	z-index: 1;
-	position: relative;
-	background: #fff;
-	border-radius: 2px;
-	box-sizing: border-box;
-	box-shadow: 0px 2px 5px #888888;
+	height: 300px;
 }
